# qt-app-template

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_web.sh
.cache/clangd/index/: Constants.h.E5BDF9A46C595459.idx  Constants.h.EA9979B0C2CA546D.idx  DashboardBackend.cpp.2386BDD18CBAE372.idx  DashboardBackend.cpp.8ADB4A8332F8B36B.idx  DashboardBackend.h.37CC3BF20C8202D3.idx  DashboardBackend.h.4635855615BDA0CF.idx  LogViewer.cpp.7C98366974B684F0.idx  LogViewer.cpp.9190B84BFF09A554.idx  LogViewer.h.2CCFAF8EA5BDD1A3.idx  LogViewer.h.86FADBB1087F155C.idx  Logger.cpp.810A5D4C4C77D2D7.idx  Logger.cpp.BBBD428702E50463.idx  Logger.h.3FBE2B85129E5511.idx  Logger.h.4FCE33B0013CE4AA.idx  annotation.h.357190069F12E556.idx  ansicolor_sink-inl.h.821E9C593A93BC11.idx  ansicolor_sink.h.168522D41FBB5186.idx  async.cpp.C15C26AAB62EDF2F.idx  async.h.33FF1635CA4A9879.idx  async_logger-inl.h.968CE1CECB3562FE.idx  async_logger.h.30AB6DDF23D281E8.idx  backtracer-inl.h.66943FC0D07E04DB.idx  backtracer.h.4DC09F44579E4B67.idx  base.h.E79136BF80F5A97F.idx  base_sink-inl.h.1ADB3531121C3D1A.idx  base_sink.h.0AEB338CC483DD7E.idx  basic_file_sink-inl.h.114C8EB6176E7F16.idx  basic_file_sink.h.128F22863962DB84.idx  build_config.h.548ED5C1F2C6D190.idx  buildflag.h.FB9D37498AB6607F.idx  bundled_fmtlib_format.cpp.F67E9F160911D5A9.idx  capture_context.h.991F7056075F54E6.idx  capture_context.h.E033695C72BC6D61.idx  cfg.cpp.4CFD9FDE3997435C.idx  check.h.701D5A744EB84987.idx  check_op.h.262B6335D84C794B.idx  chrono.h.C2CEAD07414267E8.idx  chrono.h.DB7B404026BABC2A.idx  circular_q.h.F32A9F643A18FB47.idx  clock.h.FD607CD9B90F0E56.idx  (+103 more)
cmake/: cpacklinux.cmake  fetch-deps.cmake
resources/: resources.qrc
resources/i18n/: qt-app-template_de.ts  qt-app-template_fr.ts  qt-app-template_zh.ts
scripts/: analyze_minidump.sh  debug_crash_readme.md  gen_and_upload_symbols.py  generate_symbols.sh  start_web.bat  start_web.sh
scripts/symbols---/qt-app-template/1E0F07977E5A51D2003C260A792DB6540/: qt-app-template.sym
src/app/: CMakeLists.txt  js_bridge.cpp  js_bridge.h  main.cpp  mainwindow.cpp  mainwindow.h
src/core/: CMakeLists.txt  Logger.cpp  Logger.h
src/core/config/: config_manager.cc  config_manager.h
src/core/crash/: crashpad_handler.cc  crashpad_handler.h
src/core/log/: log.cpp  log.h
src/core/network/: network_manager.cc  network_manager.h
src/core/platform/: path_manager.cc  path_manager.h
src/core/task/: task_manager.cc  task_manager.h
src/qml/: CMakeLists.txt
src/qml/Dashboard/: Dashboard.qml  DashboardBackend.cpp  DashboardBackend.h
src/shared/: CMakeLists.txt  Constants.h  version.h.in
src/widgets/: CMakeLists.txt  LogViewer.cpp  LogViewer.h  LogViewer.ui
tests/: CMakeLists.txt  tst_Core.cpp  tst_core_managers_gtest.cc  tst_widgets.cpp
web/: package-lock.json
web/src/: App.js
